[Mac Context Menu] Add missing items to mac context menu (renderer)

Due to bad refactoring in a previous change [1], some items like the Speech
functionality was not being added properly. This is now fixed by allowing
text_services_context_menu_.AppendToContextMenu(&menu_model_) to be called.

[1] https://chromium-review.googlesource.com/c/chromium/src/+/1045990/10/chrome/browser/ui/cocoa/renderer_context_menu/render_view_context_menu_mac.mm

See Bug for repro steps.

Bug: 904339
Change-Id: I1794cd24c4b9b7f68ef892aa851a01affbb5cbdb
Reviewed-on: https://chromium-review.googlesource.com/c/1366865
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615117}
Former-commit-id: 911c660e261e874f0b98f46e3966ff86a93713b5